Fix search input and display list centering bug on mobile

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -8,7 +8,7 @@
 body {
   text-align: center;
   max-height: 100vh;
-  background: url('../img/back_sun.jpg') no-repeat center center;
+  background: url('../img/default4.jpg') no-repeat center center;
 }
 
 .border-bottom {
