--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -26,7 +26,7 @@ html, body {
 .page-wrap {
   min-height: 100%;
   /* equal to footer height */
-  margin-bottom: -40px; 
+  margin-bottom: -50px; 
 }
 .page-wrap:after {
   content: "";
