--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -6,7 +6,8 @@
   background: none;
   border: none;
   color: $white;
-  font-size: 1.2em;
+  font-size: 1.25em;
+  margin-top: 1.25em;
 
   &:hover {
     text-decoration: underline;
