--- a/scss/modules/_components.scss
+++ b/scss/modules/_components.scss
@@ -10,7 +10,18 @@
 }
 
 .twitter-typeahead {
-    margin: 0 auto;
+  margin: 0 auto;
+  background-color: rgba(0,0,0,.6);
+
+  text-shadow: 0 1px 1px rgba(0,0,0,1);
+    font-size: 1.2em;
+    position: relative;
+    margin-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 8px;
+    background-color: rgba(0, 0, 0, 0.6);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, .8);
 }
 
 .typeahead,
@@ -26,9 +37,7 @@
      -moz-border-radius: 8px;
           border-radius: 8px;
   outline: none;
-
-  // border: 2px solid #fff ;
-  color: #fff;
+  color: $white;
 }
 
 .tt-query {
@@ -52,16 +61,25 @@
   }
 }
 
-.typeahead.tt-input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+.typeahead.tt-input::-webkit-input-placeholder{ /* Chrome/Opera/Safari */
   color: $white;
+  font-size: 1.3em;
+  text-indent: 10%;
+
+  
+  @media screen and  (min-width: 420px) {
+    font-size: 1em;
+    text-indent: 25%;
+  }
 }
+
 
 .tt-menu {
   width: 80%;
   margin: 12px 0;
   padding: 8px 0;
   left: 40px !important;
-  background-color: rgba(0, 0, 0, .4);
+  background-color: rgba(0, 0, 0, .6);
   color: $white;
   border-radius: 8px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
@@ -100,6 +118,9 @@
   @extend %list-text;
 
   width: 90%;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin: 0 auto;
   list-style: none;
   perspective: 1000px;
 
@@ -111,7 +132,7 @@
     padding-top: 20px;
     padding-bottom: 20px;
     border-radius: 8px;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.6);
     box-shadow: 0 2px 10px rgba(0, 0, 0, .8);
 
     @for $i from 1 through 9 {
@@ -125,23 +146,15 @@
 
     img.weather-icon {
       position: absolute;
-      top: 0;
-      left: 50%;
-      margin-left: -30px;
-      margin-top: 5px;
-
-      @media screen and (min-width: $tablet-large) {
-        top: 50%;
-        left: 75%;
-        margin-left: 0;
-        margin-top: -30px;
-      }
+      top: 50%;
+      left: 75%;
+      margin-left: 0;
+      margin-top: -30px;
     }
   }
 
   @media screen and (min-width: $tablet-large) {
     width: 60%;
-    margin: 0 auto;
   }
 
   @media screen and (min-width: $screen-small) {
@@ -176,4 +189,3 @@
     transform: rotateY(0deg) translate(0px);
   }
 }
-
